# sample-user-service

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  exceptions.py  main.py
app/models/: user.py
app/routers/: auth.py  health.py  users.py
app/schemas/: user.py
app/services/: user_service.py
docs/adr/: ADR-001-bcrypt-password-hashing.md
tests/unit/: test_user_service.py
